# ai-merchant-assistant

./: .env.example  .gitignore  BUILD_STATUS.md  DEPLOYMENT.md  DOCKER_DEPLOYMENT_GUIDE.md  DOCKER_GUIDE.md  DOCKER_SETUP.md  Dockerfile.backend  Dockerfile.frontend  GIT_SETUP.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  OPERATIONS.md  PHASE2_FIXES_AND_TESTS.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  README.md  SECURITY_AUDIT.md  SQLX_SETUP.md  STATUS_REPORT.md  STATUS_SUMMARY.md  SUPABASE_AUTH_SETUP.md  SUPABASE_SETUP.md  TESTING.md  TESTING_GUIDE.md  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  prepare_sqlx.ps1  supabase_schema.sql
backend/: .env.example  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.latest
backend/src/: lib.rs  main.rs
backend/src/ai/: confirmation.rs  mod.rs  orchestrator.rs  session.rs
backend/src/alerts/: engine.rs  mod.rs  notifier.rs
backend/src/analytics/: customer.rs  engine.rs  mod.rs  predictions.rs  pricing.rs  prophet.rs
backend/src/api/: mod.rs  state.rs
backend/src/auth/: jwt.rs  mod.rs
backend/src/config/: mod.rs  production.rs
backend/src/db/: mod.rs
backend/src/i18n/: mod.rs
backend/src/models/: analytics.rs  mod.rs  product.rs  transaction.rs  user.rs
backend/src/ocr/: easyocr.rs  mod.rs  receipt_parser.rs  service.rs
backend/src/realtime/: websocket.rs
backend/src/security/: cors.rs  mod.rs  rate_limit.rs
backend/src/services/: analytics_service.rs  mod.rs  (+3 more)
backend/tests/: README.md  ai_tests.rs  alert_tests.rs  analytics_tests.rs  integration_tests.rs  model_tests.rs  websocket_tests.rs
(+102 files in other folders)
