[package]
name = "ai-merchant-backend"
version = "0.1.0"
edition = "2021"
authors = ["AI Merchant Assistant Team"]
description = "AI-powered merchant assistant backend API"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["ws", "multipart"] }
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-br", "fs"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate", "offline"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
jsonwebtoken = "9.2"
argon2 = "0.5"

# Validation
validator = { version = "0.16", features = ["derive"] }

# HTTP Client (for Cloud AI APIs)
reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.33", features = ["serde"] }
config = "0.14"
dotenvy = "0.15"
once_cell = "1.19"

# Async Utilities
futures = "0.3"
async-trait = "0.1"

# Base64 encoding (for audio)
base64 = "0.21"

# OCR & Pattern Matching
regex = "1.10"

# i18n
lazy_static = "1.4"

[dev-dependencies]
mockall = "0.12"
wiremock = "0.6"
tokio-test = "0.4"

[[bin]]
name = "ai-merchant-backend"
path = "src/main.rs"
